2007-11-30  Christian Faulhammer  <opfer@gentoo.org>

	* elisp-common.eclass: Added messages when operations finish

2007-11-29  Ulrich Mueller  <ulm@gentoo.org>

	* elisp-common.eclass (elisp-site-file-install): Install files in
	site-lisp again, since otherwise things break during unmerge when
	an old version of the eclass is used.

2007-11-28  Ulrich Mueller  <ulm@gentoo.org>

	* elisp-common.eclass (elisp-site-regen): Do not use a pipeline,
	otherwise the loop is executed in a subshell and we cannot set
	variables from there. Use bash arrays and our own sort routine
	instead.

2007-11-27  Ulrich Mueller  <ulm@gentoo.org>

	* elisp-common.eclass (elisp-site-regen): Emit warning message if
	files are found in the old location; this is still commented out.

2007-11-24  Ulrich Mueller  <ulm@gentoo.org>

	* elisp-common.eclass (elisp-site-file-install, elisp-site-regen):
	Replace basename by bash parameter expansion.
	Install packages' site-init files in site-gentoo.d subdirectory.

2007-11-23  Ulrich Mueller  <ulm@gentoo.org>

	* elisp-common.eclass (SITEETC): New variable.
	(elisp-site-file-install): Handle @SITEETC@ in site-init file.

2007-11-01  Ulrich Mueller  <ulm@gentoo.org>

	* elisp-common.eclass (EMACSFLAGS): New variable, replaces
	EMACS_BATCH_CLEAN. Rationale: Keep program path separate from
	flags, to allow its redefinition in ebuilds.
	(elisp-compile, elisp-comp): Group compile functions together.

2007-10-20  Ulrich Mueller  <ulm@gentoo.org>

	* elisp-common.eclass (elisp-comp): Use square brackets for test.
	Remove dysfunctional code.

2007-10-04  Christian Faulhammer  <opfer@gentoo.org>

	* elisp-common.eclass (EMACS): use an en dash instead of a hypen
	in comment

2007-10-03  Ulrich Mueller  <ulm@gentoo.org>

	* elisp-common.eclass (SITELISP, SITEFILE): Document variables.

2007-09-26  Christian Faulhammer  <opfer@gentoo.org>

	* elisp-common.eclass: remove colon from previous change

2007-09-25  Christian Faulhammer  <opfer@gentoo.org>
