@@ -1,3 +1,8 @@
+2007-11-30  Ulrich Mueller  <ulm@gentoo.org>
+
+	* elisp-common.eclass (elisp-site-regen): Set nullglob option,
+	because there may be a directory without matching files.
+
 2007-11-30  Christian Faulhammer  <opfer@gentoo.org>
 
 	* elisp-common.eclass: Added messages when operations finish
